--- a/css/newslist.css
+++ b/css/newslist.css
@@ -3,9 +3,7 @@ body { background: #fff; }
 
 .clearfix:after { content: "\200B"; display: block; height: 0; clear: both; }
 
-.top-bar { height: 46px; background-color: white; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); background: url(http://p8.qhimg.com/d/inn/f9855c94/meirikandian.png) no-repeat center center; background-size: 81px 19px; }
-
-section { padding: 0 10px 25px 10px; background: repeat-x bottom left url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAMAAACuX0YVAAAABlBMVEUAAADr6+uKgpdZAAAAAnRSTlMA/1uRIrUAAAAPSURBVHjaAQQA+/8AAAABAAUAAiuizs8AAAAASUVORK5CYII=); background-size: 100% 1px; }
+section { padding: 0 16px 25px 16px; background: repeat-x bottom left url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAMAAACuX0YVAAAABlBMVEUAAADr6+uKgpdZAAAAAnRSTlMA/1uRIrUAAAAPSURBVHjaAQQA+/8AAAABAAUAAiuizs8AAAAASUVORK5CYII=); background-size: 100% 1px; }
 
 section .slogan { color: #b7b7b7; font-size: 10px; margin: -13px 0 9px 0; }
 
@@ -69,7 +67,7 @@ body #dl-banner .logo { width: 45px; height: 45px; float: left; margin: 0px 8px 
 
 #load-more img { vertical-align: text-bottom; }
 
-.banner-step2{
+.grayBar{
 	height: 43px;
 	border-bottom: 1px solid #e1e1e1;
 	padding:0 16px;
@@ -78,21 +76,21 @@ body #dl-banner .logo { width: 45px; height: 45px; float: left; margin: 0px 8px 
 	position: relative;
 	background-color: #f7f7f7;
 }
-.banner-step2-tag{
+.grayBar-tag{
 	display: inline-block;
 	border-radius: 13px;
 	border: 1px solid #d6d6d6;
 	padding: 7px 10px;
 	line-height: 1;
-	margin-top: 7px;
+	margin-top: 8px;
 	margin-right: 5px;
 }
-.banner-step2-rt *{
+.grayBar-rt *{
 	vertical-align: middle;
 }
-.banner-step2-rt{
+.grayBar-rt{
 	position: absolute;
-	top: 10px;
+	top: 13px;
 	right: 16px;
 	vertical-align: middle;
 }
