--- a/css/newslist.css
+++ b/css/newslist.css
@@ -3,7 +3,9 @@ body { background: #fff; }
 
 .clearfix:after { content: "\200B"; display: block; height: 0; clear: both; }
 
-section { padding: 0 16px 25px 16px; background: repeat-x bottom left url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAMAAACuX0YVAAAABlBMVEUAAADr6+uKgpdZAAAAAnRSTlMA/1uRIrUAAAAPSURBVHjaAQQA+/8AAAABAAUAAiuizs8AAAAASUVORK5CYII=); background-size: 100% 1px; }
+section { padding: 0 0 25px 0;/*  background: repeat-x bottom left url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAMAAACuX0YVAAAABlBMVEUAAADr6+uKgpdZAAAAAnRSTlMA/1uRIrUAAAAPSURBVHjaAQQA+/8AAAABAAUAAiuizs8AAAAASUVORK5CYII=); background-size: 100% 1px;  */
+
+border-bottom: 1px solid #e1e1e1}
 
 section .slogan { color: #b7b7b7; font-size: 10px; margin: -13px 0 9px 0; }
 
@@ -71,10 +73,17 @@ body #dl-banner .logo { width: 45px; height: 45px; float: left; margin: 0px 8px 
 	height: 43px;
 	border-bottom: 1px solid #e1e1e1;
 	padding:0 16px;
+	margin:0 -16px;
 	font-size: 12px;
 	color: #666;
 	position: relative;
 	background-color: #f7f7f7;
+}
+a.grayBar-rt span,
+a.grayBar-rt:hover span,
+a.grayBar-rt:active span,
+a.grayBar-rt:visited span{
+	color: #666;
 }
 .grayBar-tag{
 	display: inline-block;
