--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@font-face{
+	font-family: "fzLantingHei";
+	src: url(../font/FZLTHJW.TTF) format('truetype');
+	font-weight: 300
+}
 html, body{
 	margin: 0;
 	padding: 0;
@@ -6,7 +11,7 @@ html, body{
 	min-height: 100%;
 }
 body, button{
-	font-family: 'STHeiti','Microsoft Yahei', sans-serif;
+	font-family: 'fzLantingHei','STHeiti','Microsoft Yahei', sans-serif;
 }
 html{
 	font-size: 100px;
@@ -77,7 +82,9 @@ a{
 hr{
 	display: none;
 }
-
+section:last-child{
+	border-bottom: none;
+}
 .center{
 	text-align: center;
 }
@@ -133,6 +140,9 @@ hr{
 	clear: both;
 }
 
+.block{
+	display: block;
+}
 /* 通栏按钮 */
 .cross-column-button{
 	display: block;
@@ -147,7 +157,18 @@ hr{
 .cross-column-button:active{
 	background: #ebebeb;
 }
-
+.flex{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: flex;
+}
+.flex-item{
+	-webkit-box-flex:1;
+	-webkit-flex:1;
+	flex:1;
+	width: 1px;
+	display: block;
+}
 .separator{
 	display: none;
 	height: 1px;
@@ -343,10 +364,6 @@ hr{
 	background-size: 30%;
 }
 
-.part .photo{
-	display: inline-block;
-}
-
 .circle-button{
 	border-radius: 50%;
 	width: 36px;
@@ -379,6 +396,12 @@ hr{
 	margin-bottom: 60px;
 	padding-left:16px;
 	padding-right:16px;
+	
+}
+.forbid{
+	
+	-webkit-pointer-events: none;
+	pointer-events: none;
 }
 .wrapper.joke .article.part p, .wrapper.gif .article.part p{
 	color: rgba(0, 0, 0, 0.6);
@@ -459,7 +482,6 @@ hr{
 	left: 0.41667em;
 }
 .article.part p{
-	font-size: 1.0625em;
 	line-height: 1.6;
 	text-align: justify;
 	margin: 0.88235em 0em;
@@ -524,10 +546,9 @@ hr{
 }
 .article.part .mod{
 	margin: 0.9375em 0em;
-	padding: 13px 16px;
+	padding: 13px 0;
 	overflow: hidden;
 	position: relative;
-	background: #eee;
 }
 .article.part .mod .mod-flag{
 	position: absolute;
@@ -589,10 +610,10 @@ hr{
 .article.part .mod p:last-child{
 	margin-bottom: 0;
 }
-.article.part .gallery.mod .gallery-wrap .gallery, .article.part .weibo.mod .weibo-item .gallery, .article.part .video.mod .photo{
+/* .article.part .gallery.mod .gallery-wrap .gallery, .article.part .weibo.mod .weibo-item .gallery, .article.part .video.mod .photo{
 	margin-left: -6px;
 	margin-right: -6px;
-}
+} */
 .article.part .block.mod{
 	background: none;
 	padding: 0;
@@ -921,3 +942,364 @@ hr{
 	border-radius: 3px;
 	margin-top: 85px;
 }
+/* 文章推荐 */
+
+.recommend-articles.part{
+}
+.recommend-articles.part .more{
+	font-size: 14px;
+	color: #484747;
+	text-align: center;
+	display: block;
+	text-decoration: none;
+	margin: 3em auto;
+	position: relative;
+}
+.recommend-articles.part .more:before{
+	content: "";
+	display: block;
+	height: 1px;
+	border-bottom: 1px solid #e6e6e6;
+	-webkit-transform: translate3d(0, 6px, 0) scaleY(0.5);
+}
+.recommend-articles.part .more:after{
+	content: "";
+	display: block;
+	height: 1em;
+	background: #fff;
+	-webkit-transform: translate3d(0, 0px, 0);
+	margin: 0 auto;
+	width: 13em;
+}
+.recommend-articles.part .more span{
+	z-index: 1;
+	position: absolute;
+	left: 50%;
+	top: -14px;
+	width: 180px;
+	margin-left: -90px;
+	line-height: 26px;
+}
+.recommend-articles.part .more img{
+	width: 26px;
+	height: 26px;
+	position: relative;
+	bottom: -8px;
+	left: -4px;
+	margin: 0 6px;
+}
+.recommend-articles.part ul{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-align: top;
+	-webkit-align-items: top;
+	align-items: top;
+}
+.recommend-articles.part li{
+	-webkit-box-flex:1;
+	-webkit-flex:1;
+	flex:1;
+	width: 1px;
+	background: #fafafa;
+	margin-bottom: 6px;
+	position: relative;
+	padding-bottom: 28px;
+}
+.recommend-articles.part ul li:first-child{
+	margin-right: 3px
+}
+.recommend-articles.part li .time-tips{
+	font-size: 12px;
+	color: #9c9c9c;
+	padding:6px 7px;
+	position: absolute;
+	left: 0;
+	bottom: 0
+}
+.recommend-articles.part li a{
+	text-decoration: none;
+	color: #333;
+	display: block;
+	padding:0 7px;
+}
+.recommend-articles.part li b{
+	font-weight: normal;
+}
+.recommend-articles.part li b:before{
+	content: "";
+	background-image: url(../images/icon-msg.png);
+	background-size: 9px 9px;
+	width: 9px;
+	height: 9px;
+	margin: auto 10px;
+	display: inline-block;
+}
+.recommend-articles.part li i{
+	font-style: normal;
+}
+.recommend-articles.part li s{
+	text-decoration: none;
+}
+.recommend-articles.part li p{
+	font-size: 14px;
+	text-indent: 0;
+}
+.recommend-articles.part .articles-list .column-name{
+	color: #41c249;
+	font-size: 11px;
+}
+.recommend-articles.part .articles-list .title{
+	font-size: 15px;
+}
+
+.hot-articles.part .articles-list li{
+	height: 82px;
+	background:#fafafa;
+	margin-bottom: 4px;
+}
+.hot-articles.part .articles-list .txts{
+	  padding: 8px 10px 0 10px;
+}
+.hot-articles.part .articles-list p{
+	line-height: 1.2;
+	padding:0;
+	margin:0;
+	font-size: 12px;
+	color:#999;
+	margin-top: 5px;
+}
+.hot-articles.part .articles-list .title-link{
+	color: #333
+}
+
+.row2{
+	-webkit-box-orient: vertical;
+	display: -webkit-box;
+	overflow: hidden;
+	white-space: normal;
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+}
+.row3{
+	-webkit-box-orient: vertical;
+	display: -webkit-box;
+	overflow: hidden;
+	white-space: normal;
+	-webkit-line-clamp: 3;
+	line-clamp: 3;
+}
+
+
+.article.part .gallery.mod{
+	padding-top: 10px;
+}
+.article.part .gallery.mod h3{
+	font-size: 0.75em;
+	margin: 0;
+	color: rgba(0, 0, 0, 0.54);
+	overflow: hidden;
+	text-align: center;
+}
+.article.part .gallery.mod .pages{
+	position: absolute;
+	display: block;
+	right: 15px;
+	bottom: 15px;
+	text-align: right;
+	color: #fff;
+}
+.article.part .gallery.mod .galleryflag{
+	position: absolute;
+	display: block;
+	width: 36px;
+	height: 36px;
+	top: 50%;
+	left: 50%;
+	margin-top: -18px;
+	margin-left: -18px;
+	background:url(../images/gallery-icon.png) no-repeat center center;
+	background-size: 36px auto
+}
+.article.part .gallery.mod .gallery-more{
+	position: absolute;
+	font-size: 12px;
+	text-align: center;
+	color: #FFF;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+}
+.article.part .gallery.mod .gallery-wrap{
+	padding: 0.9375em 0em;
+}
+@media (-webkit-min-device-pixel-ratio: 2){
+	/* .article.part .gallery.mod .gallery-wrap:not(:last-child){
+	border-bottom: none;
+	background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-size: 100% 1px;
+	background-repeat: no-repeat;
+		background-position: bottom;
+	} */
+}
+@media (-webkit-max-device-pixel-ratio: 1.99){
+	/* .article.part .gallery.mod .gallery-wrap:not(:last-child){
+		border-bottom: 1px solid #e1e1e1;
+	} */
+}
+.article.part .gallery.mod .gallery-wrap:first-child{
+	padding-top: 0;
+}
+.article.part .gallery.mod .gallery-wrap:last-child{
+	padding-bottom: 0;
+}
+.article.part .wiki.mod{
+	padding-top: 10px;
+	padding-bottom: 6px;
+}
+@media (-webkit-min-device-pixel-ratio: 2){
+	.article.part .wiki.mod li:not(:first-child){
+	border-top: none;
+	background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-size: 100% 1px;
+	background-repeat: no-repeat;
+		background-position: top;
+	}
+}
+@media (-webkit-max-device-pixel-ratio: 1.99){
+	.article.part .wiki.mod li:not(:first-child){
+		border-top: 1px solid #e1e1e1;
+	}
+}
+.article.part .wiki.mod li a{
+	border-width: 0;
+}
+.article.part .wiki.mod li a h4{
+	margin: 0em 0em 0.41176em 0em;
+}
+.article.part .wiki.mod a, .article.part .further-reading a{
+	overflow: hidden;
+	display: block;
+	font-size: 0.9375em;
+	padding: 0.66667em 0em;
+	text-align: justify;
+	color: rgba(0, 0, 0, 0.54);
+}
+.article.part .wiki.mod a h4, .article.part .further-reading a h4{
+	color: rgba(0, 0, 0, 0.87);
+	font-size: 1.13333em;
+	margin: 0.23529em 0em;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
+.article.part .weibo.mod{
+	padding-top: 1em;
+	padding-bottom: 0.875em;
+}
+.article.part .weibo.mod .weibo-info{
+	text-align: left;
+	overflow: hidden;
+	margin: 0em 0em 0.75em 0em;
+}
+.article.part .weibo.mod .weibo-info .avatar{
+	float: left;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	margin-right: 0.75em;
+}
+.article.part .weibo.mod .weibo-info .date{
+	color: rgba(0, 0, 0, 0.54);
+	font-size: 12px;
+}
+.article.part .weibo.mod .weibo-info .username{
+	font-size: 1.0625em;
+	color: rgba(0, 0, 0, 0.87);
+	position: relative;
+	top: -4px;
+}
+.article.part .weibo.mod .weibo-info a:after{
+	content: "";
+	background: url(../images/icon-weibo-bigV.png) no-repeat 0 0;
+	width: 12px;
+	height: 12px;
+	background-size: 12px 12px;
+	display: inline-block;
+	margin-left: 4px;
+}
+.article.part .weibo.mod cite{
+	text-align: left;
+	font-size: 0.9375em;
+	color: rgba(0, 0, 0, 0.87);
+	display: block;
+	margin: 0em 0em 0.8em 0em;
+}
+.article.part .weibo.mod .weibo-item{
+	padding: 0.9375em 0em;
+}
+@media (-webkit-min-device-pixel-ratio: 2){
+	.article.part .weibo.mod .weibo-item:not(:last-child){
+	border-bottom: none;
+	background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+	background-size: 100% 1px;
+	background-repeat: no-repeat;
+		background-position: bottom;
+	}
+}
+@media (-webkit-max-device-pixel-ratio: 1.99){
+	.article.part .weibo.mod .weibo-item:not(:last-child){
+		border-bottom: 1px solid #e1e1e1;
+	}
+}
+.article.part .weibo.mod .weibo-item:first-of-type{
+	padding-top: 0;
+}
+.article.part .weibo.mod .weibo-item:last-of-type{
+	padding-bottom: 0;
+}
+.article.part .weibo.mod .stat{
+	font-size: 0.75em;
+	color: rgba(0, 0, 0, 0.54);
+	text-align: left;
+}
+.article.part .weibo.mod .stat span{
+	padding: 0 5px;
+}
+.article.part .weibo.mod .stat span:first-child{
+	border-right: 1px solid rgba(0, 0, 0, 0.12);
+}
+.article.part .video.mod{
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.article.part .video.mod h4{
+	font-size: 0.75em;
+	color: rgba(0, 0, 0, 0.54);
+	text-align: center;
+	margin-top: 0.5em;
+}
+.article.part .video.mod .photo{
+	margin-top: 10px;
+	background: black;
+}
+.article.part .video.mod .photo:first-child{
+	margin-top: 0;
+}
+.article.part .video.mod .play{
+	left: 50%;
+	top: 50%;
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	-webkit-transform: translate3d(-50%, -50%, 0);
+}
+.article.part .video.mod .snapshot{
+	display: block;
+	opacity: 0.7;
+}
+.article.part .video.mod a:active .snapshot{
+	opacity: 1;
+}
+
