--- a/css/photoswipe.css
+++ b/css/photoswipe.css
@@ -84,10 +84,10 @@
 /* pswp__ui--over-close class it added when mouse is over element that should close gallery */
 .pswp__ui--over-close .pswp__button--close { opacity: 1; }
 
-.pswp__button, .pswp__button--arrow--left:before, .pswp__button--arrow--right:before { background: url(//p4.qhimg.com/d/inn/7165b7ac/photoswipe-default-skin.png) 0 0 no-repeat; background-size: 264px 88px; width: 44px; height: 44px; }
+.pswp__button, .pswp__button--arrow--left:before, .pswp__button--arrow--right:before { background-size: 264px 88px; width: 44px; height: 44px; }
 
 @media (-webkit-min-device-pixel-ratio: 1.1), (-webkit-min-device-pixel-ratio: 1.09375), (min-resolution: 105dpi), (min-resolution: 1.1dppx) { /* Serve SVG sprite if browser supports SVG and resolution is more than 105dpi */
-  .pswp--svg .pswp__button, .pswp--svg .pswp__button--arrow--left:before, .pswp--svg .pswp__button--arrow--right:before { background-image: url(//s8.qhimg.com/static/24c2d5555603b0e7/photoswipe-default-skin.svg); }
+  .pswp--svg .pswp__button, .pswp--svg .pswp__button--arrow--left:before, .pswp--svg .pswp__button--arrow--right:before {  }
   .pswp--svg .pswp__button--arrow--left, .pswp--svg .pswp__button--arrow--right { background: none; } }
 .pswp__button--close { background-position: 0 -44px; }
 
@@ -116,7 +116,7 @@
 
 .pswp__button--arrow--right { right: 0; }
 
-.pswp__button--arrow--left:before, .pswp__button--arrow--right:before { content: ''; top: 35px; background-color: rgba(0, 0, 0, 0.3); height: 30px; width: 32px; position: absolute; }
+.pswp__button--arrow--left:before, .pswp__button--arrow--right:before { content: ''; top: 35px; background-color: rgba(0, 0, 0, 0); height: 30px; width: 32px; position: absolute; }
 
 .pswp__button--arrow--left:before { left: 6px; background-position: -138px -44px; }
 
