--- a/css/common.css
+++ b/css/common.css
@@ -809,7 +809,7 @@ a.grayBar-rt:visited span{
 .comments.part .comment-list li .text{
 	padding: 1.14286em;
 	margin: 0.71429em 0em 0em 0em;
-	background: #eee;
+	background: #fafafa;
 }
 .comments.part .comment-list li .time{
 	font-size: 0.75em;
@@ -827,7 +827,7 @@ a.grayBar-rt:visited span{
 	float: right;
 }
 .comments.part .comment-list li .info .thumbup, .comments.part .comment-list li .info .thumbup-active{
-	padding: 0em 0em 0em 0.66667em;
+	padding: 0em 0.66667em 0em 0em;
 }
 .comments.part .comment-list li .info .thumbup img, .comments.part .comment-list li .info .thumbup-active img{
 	width: 1em;
@@ -841,7 +841,7 @@ a.grayBar-rt:visited span{
 .comments.part .more-comments{
 	display: block;
 	font-size: 0.875em;
-	color: #df2b26;
+	color: #5888b9;
 	margin-top: 1.14286em;
 	padding: 1.14286em 0em;
 	text-align: center;
