--- a/css/photoswipe.css
+++ b/css/photoswipe.css
@@ -110,7 +110,7 @@
 
 /* Arrow buttons hit area (icon is added to :before pseudo-element)
 */
-.pswp__button--arrow--left, .pswp__button--arrow--right { background: none; top: 50%; margin-top: -50px; width: 70px; height: 100px; position: absolute; }
+.pswp__button--arrow--left, .pswp__button--arrow--right {display: none; background: none; top: 50%; margin-top: -50px; width: 70px; height: 100px; position: absolute; }
 
 .pswp__button--arrow--left { left: 0; }
 
