--- a/css/common-wap.css
+++ b/css/common-wap.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 html, body{
 	margin: 0;
 	padding: 0;
@@ -6,7 +7,7 @@ html, body{
 	min-height: 100%;
 }
 body, button{
-	font-family: 'STHeiti','Microsoft Yahei', sans-serif;
+	font-family:'STHeiti','Microsoft Yahei', sans-serif;
 }
 html{
 	font-size: 100px;
@@ -795,10 +796,13 @@ a.grayBar-rt:visited span{
 	width: 1.25em;
 	height: 1.25em;
 	line-height: 1.25em;
+	background: url(../images/icon-default-avatar.png) no-repeat;
+	display: inline-block;
+	background-size: contain
 }
 .comments.part .comment-list li .info-text{
 	font-size: 0.875em;
-	color: rgba(0, 0, 0, 0.87);
+	color: #333;
 	margin-left: 2.28571em;
 }
 .comments.part .comment-list li .text{
@@ -822,13 +826,19 @@ a.grayBar-rt:visited span{
 	float: right;
 }
 .comments.part .comment-list li .info .thumbup, .comments.part .comment-list li .info .thumbup-active{
-	padding: 0em 0.66667em 0em 0em;
+	padding: 0em 0em 0em 0.5em;
 }
-.comments.part .comment-list li .info .thumbup img, .comments.part .comment-list li .info .thumbup-active img{
+.comments.part .comment-list li .info .thumbup i, .comments.part .comment-list li .info .thumbup-active i{
 	width: 1em;
 	height: 1em;
 	position: relative;
 	top: 1px;
+	background: url(../images/icon-thumbup.png) no-repeat;
+	background-size: contain;
+	display: inline-block;
+}
+.comments.part .comment-list li .info .thumbup-active i{
+	background-image: url(../images/icon-thumbup-active.png);
 }
 .comments.part .comment-list li:not(:last-child){
 	margin-bottom: 1em;
@@ -842,14 +852,24 @@ a.grayBar-rt:visited span{
 	text-align: center;
 }
 @media (-webkit-min-device-pixel-ratio: 2){
-	.comments.part .more-comments{
-	border-top: none;
-	background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
-	background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
-	background-size: 100% 1px;
-	background-repeat: no-repeat;
+	.comments.part .more-comments,.part h2.title{
+		border-top: none;
+		background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+		background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+		background-size: 100% 1px;
+		background-repeat: no-repeat;
 		background-position: top;
 	}
+	.grayBar{
+		border-bottom: none;
+		background-image: -webkit-linear-gradient(-90deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+		background-image: linear-gradient(180deg, transparent 0%, transparent 50%, #e1e1e1 50%);
+		background-size: 100% 1px;
+		background-repeat: no-repeat;
+		background-position: top;
+		background-position: 0 bottom;
+	}
+	
 }
 @media (-webkit-max-device-pixel-ratio: 1.99){
 	.comments.part .more-comments{
@@ -903,7 +923,6 @@ a.grayBar-rt:visited span{
 	position: relative;
 	width: 20px;
 	height: 20px;
-	background: url(../images/icon-thumbup.png);
 }
 
 @-webkit-keyframes beat{
@@ -1099,7 +1118,7 @@ a.grayBar-rt:visited span{
 .recommend-articles.part li .time-tips{
 	font-size: 12px;
 	color: #9c9c9c;
-	padding:6px 7px;
+	padding:6px 0;
 	position: absolute;
 	left: 0;
 	bottom: 0
@@ -1138,9 +1157,12 @@ a.grayBar-rt:visited span{
 .recommend-articles.part .articles-list .title{
 	font-size: 15px;
 }
+#sx-recommond ul:last-child {
+    margin-bottom: -10px;
+}
 
 .hot-articles.part .articles-list li{
-	height: 82px;
+	height: 62px;
 	background:#fafafa;
 	padding:10px;
 	margin-bottom: 10px;
@@ -1391,14 +1413,26 @@ a.grayBar-rt:visited span{
 }
 
 
+
 /* wap gallery pop add css */
 .mfp-bottom-bar .mfp-counter{
-	position: fixed;
-	top: auto;
-	left: auto;
-	right: 16px;
-	bottom: 60px;
+	position: absolute;
+	top: 10px;
+	left: 16px;
 	font-size: 1em;
 }
-
+.mfp-content .mfp-bottom-bar{
+	position: fixed;
+	top: auto;
+	left: 0;
+	bottom: 45px;
+	background: rgba(0,0,0,.7);
+	height: 60px;
+	overflow-y:scroll;
+    padding: 10px 0;
+}
+.mfp-content .mfp-title{
+    padding: 0 16px 0 50px;
+    color:#ccc;
+}
 
